# content-accessibility-utility-on-aws

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TESTING_PLAN.md  cliff.toml  pyproject.toml
.github/workflows/: ai-quality.yml  pages.yml  publish.yml  test.yml
content_accessibility_utility_on_aws/: __init__.py  api.py  cli.py  deploy.py
content_accessibility_utility_on_aws/agent/: __init__.py  agent.py  axe_adapter.py  browser_probe.py  deterministic_loop.py  pipeline.py  rendered_auditor.py  session.py
content_accessibility_utility_on_aws/audit/: __init__.py  api.py  auditor.py  base_check.py  context_collector.py  standards.py
content_accessibility_utility_on_aws/audit/analyzers/: __init__.py  base_analyzer.py
content_accessibility_utility_on_aws/audit/checks/: __init__.py  color_contrast_checks.py  color_usage_checks.py  document_language_check.py  image_checks.py  structure_checks.py  tab_order_checks.py  table_checks.py  target_size_checks.py
content_accessibility_utility_on_aws/batch/: common.py  pdf2html.py
content_accessibility_utility_on_aws/deployment_assets/: README.md  __init__.py  requirements.txt  template.yaml
content_accessibility_utility_on_aws/i18n/: __init__.py  api.py  language_selector.py  languages.py  translator.py
content_accessibility_utility_on_aws/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  pt.json  zh.json
content_accessibility_utility_on_aws/pdf2html/: __init__.py  api.py
content_accessibility_utility_on_aws/remediate/: __init__.py  api.py  remediation_manager.py  remediator.py  validation.py
content_accessibility_utility_on_aws/report/: __init__.py  acr_generator.py  pdf_exporter.py  scoring.py  vpat_generator.py
content_accessibility_utility_on_aws/utils/: color_contrast.py  config.py  config_defaults.yaml  constants.py  css_dimensions.py  i18n.py  image_utils.py  logging_helper.py  report_generator.py  resources.py  style_resolver.py  usage_tracker.py
deployment/: agentcore_app.py  build_wheel.sh  requirements.txt  template.yaml
deployment/trigger_lambda/: handler.py  test_routing.py
docs/: 404.html  Gemfile  WCAG_2.1_COVERAGE_MATRIX.md  WCAG_QUICK_REFERENCE.md  _config.yml  accessibility_remediation.md  api_integration_guide.md  architecture.md  cli_guide.md  color_accessibility.md  get_started.md  i18n_implementation_guide.md  index.md  parameter_reference.md  pipeline_guide.md  reference.md  rendered_agent_guide.md  reporting_guide.md  streamlit_guide.md  tab_order_optimization.md  tab_order_usage_example.py
docs/_includes/: header_custom.html  nav_footer_custom.html
docs/_sass/custom/: custom.scss
scripts/: release.py
tests/: __init__.py  conftest.py  test_color_contrast_checks.py  test_color_usage_checks.py  test_i18n.py  test_style_resolver.py  test_tab_order_integration.py  verify_tab_order_integration.py
tests/ai_quality/: conftest.py  judge.py  test_alt_text_quality.py  test_table_remediation_quality.py  test_text_generation_quality.py
tests/audit/: test_audit_checks.py  test_color_contrast_math.py  test_report_generation.py  test_target_size_check.py
tests/e2e/: test_end_to_end_offline.py
tests/i18n/: test_api.py  test_cli_options.py  test_language_selector.py  test_languages.py  test_translator.py
tests/integration/: __init__.py  test_audit_remediate_flow.py
tests/remediate/: test_bedrock_reasoning_block.py  test_bedrock_temperature_fallback.py  test_computed_contrast.py  test_duplicate_ids.py  test_duplicate_link_remediation.py  test_element_resolution.py  test_element_resolution_after_mutation.py  test_focus_order.py  test_model_backed_remediation.py  test_rule_based_remediation.py  test_table_structure.py
tests/rendered/: conftest.py  test_agent_end_to_end.py  test_agentcore_probe.py  test_axe_adapter.py  test_axe_integrity.py  test_browser_probe.py  test_cli_flags.py  test_deploy_pipeline.py  test_focus_remediation.py  test_init_pipeline.py  test_name_role_value_remediation.py  test_page_state.py  test_pipeline_multipage.py  test_session_and_hook.py
tests/unit/: __init__.py  test_auditor.py  test_validation.py
tests/utils/: test_css_dimensions.py  test_text_generation.py
webapp/: app.py
webapp/components/: sidebar.py
webapp/config/: __init__.py  app_config_local.py
webapp/processors/: html_processor.py  pdf_processor.py  zip_processor.py
webapp/ui_helpers/: charts.py  download_helpers.py  html_preview.py
webapp/utils/: aws_utils.py  session_utils.py
webapp/views/: audit_view.py  remediation_view.py  report_view.py  usage_view.py
(+65 files in other folders)
