# Copyright 2025 Amazon.com, Inc. or its affiliates.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-accessibility-utility-on-aws"
dynamic = ["version"]
authors = [
    { name = "Addie Rudy <awsrudy@amazon.com>;" }
]
license = "Apache-2.0"
description = "The “Content Accessibility Utility on AWS” offers a comprehensive solution for modernizing web content accessibility with state-of-the-art Generative AI models, powered by Amazon Bedrock. “Content Accessibility Utility on AWS” allows users to automatically audit and remediate WCAG 2.1 accessibility compliance issues."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities",
]
dependencies = [
    "Pillow>=11.1.0",
    "boto3>=1.37.11",
    "botocore>=1.37.11",
    "beautifulsoup4>=4.11.0",
    "bs4>=0.0.1",
    "pydantic>=2.10.6",
    "defusedcsv>=2.0.0",
    "Flask>=3.1.0",
    "PyYaml>=6.0.0",
    "pypdf>=5.4.0"
]

[project.optional-dependencies]
WebApp = [
    "streamlit>=1.43.2",
]
# Rendered accessibility layer: a real headless browser (Playwright) is used to
# measure computed styles, the accessibility tree, and interactive behavior that
# static HTML analysis cannot see. After installing, run
# `playwright install chromium` to fetch the browser binary.
rendered = [
    "playwright>=1.40.0",
]
# Agent layer: the Strands agent that drives the render -> fix -> verify loop on
# top of the rendered layer. Pulls in the rendered extra. Includes the AgentCore
# SDK so the hosted path (AgentCoreBrowserProbe) works without a local Chromium.
agent = [
    "playwright>=1.40.0",
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.1.0",
    "bedrock-agentcore>=0.1.0",
]
# Internationalization layer: translate the worked-on content into one or more
# target languages via Amazon Bedrock (uses the core boto3 dependency) and emit
# an optional multilingual document with a language selector and browser-language
# auto-detection. babel supplies localized language display names and
# Accept-Language negotiation; langdetect auto-detects the source language. Both
# degrade to built-in fallbacks when absent, so this extra is a quality upgrade
# rather than a hard requirement for the translation itself.
i18n = [
    "babel>=2.14.0",
    "langdetect>=1.0.9",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default to the offline core suite. The AWS-backed AI quality tier is opt-in
# via `pytest -m aws`; the browser-backed rendered tier is opt-in via
# `pytest -m rendered` (needs the [rendered] extra + a Chromium binary).
addopts = "-m 'not aws and not rendered' --strict-markers"
markers = [
    "aws: tests that make real AWS Bedrock calls (cost money, need credentials)",
    "llm_judge: AI-quality tests that use an LLM-as-a-judge to score output",
    "rendered: tests that launch a real headless browser via Playwright (need the [rendered] extra + `playwright install chromium`)",
]

[project.urls]
"Bug Tracker" = "https://github.com/awslabs/content-accessibility-utility-on-aws/issues"
"Documentation" = "https://github.com/awslabs/content-accessibility-utility-on-aws"
"Source Code" = "https://github.com/awslabs/content-accessibility-utility-on-aws"

[project.scripts]
content-accessibility-utility = "content_accessibility_utility_on_aws.cli:main"
content-accessibility-utility-on-aws = "content_accessibility_utility_on_aws.cli:main"


[tool.setuptools]
packages = { find = { include = ["content_accessibility_utility_on_aws*"] } }

[tool.setuptools.package-data]
content_accessibility_utility_on_aws = [
    "**/*.html",
    "agent/vendor/*.js",
    # Bundled deploy scaffolding written out by `init-pipeline`.
    "deployment_assets/*.yaml",
    "deployment_assets/*.txt",
    "deployment_assets/*.md",
    "deployment_assets/**/*.py",
]

[tool.setuptools.dynamic]
version = { attr = "content_accessibility_utility_on_aws.__version__" }

[tool.pip-licenses]
format = "markdown"
with-description = true
with-url = true
with-version = true
output = "THIRD-PARTY-LICENSES"
order = "license"

